--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,7 @@ env_logger = "0.10"
 log = "0.4"
 wgpu = "0.18"
 pollster = "0.3"
+instant = "0.1"
+bytemuck = { version = "1.12", features = [ "derive" ] }
+
 
